Perkin-UAT/force-app/main/default/objects/Account/fields/Account_Alias__c.field-meta.xml
<CustomField>
    <fullName>Account_Alias__c</fullName>
    <label>Account Alias</label>
    <length>100</length>
    <type>Text</type>
</CustomField>