Perkin-UAT/force-app/main/default/objects/Account/fields/Account_Blocked_Date__c.field-meta.xml
<CustomField>
    <fullName>Account_Blocked_Date__c</fullName>
    <label>Account Blocked Date</label>
    <type>Date</type>
</CustomField>