Perkin-UAT/force-app/main/default/objects/Account/fields/Account_Category_Calc__c.field-meta.xml
<CustomField>
    <fullName>Account_Category_Calc__c</fullName>
    <label>Account Category Calc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>