Perkin-UAT/force-app/main/default/objects/Account/fields/Account_End_Market__c.field-meta.xml
<CustomField>
    <fullName>Account_End_Market__c</fullName>
    <label>Account End-Market</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Account_Sector__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pharmaceuticals</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>CROs &amp; CMOs</fullName>
            </value>
            <value>
                <fullName>Academia</fullName>
            </value>
            <value>
                <fullName>Government Research</fullName>
            </value>
            <value>
                <fullName>Government Testing</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Defense/Military</fullName>
            </value>
            <value>
                <fullName>Ag/Food &amp; Beverage</fullName>
            </value>
            <value>
                <fullName>General &amp; Environmental Testing Labs</fullName>
            </value>
            <value>
                <fullName>Hospital &amp; Clinical Labs</fullName>
            </value>
            <value>
                <fullName>Forensics</fullName>
            </value>
            <value>
                <fullName>Medical Devices</fullName>
            </value>
            <value>
                <fullName>Direct-To-Consumer Testing</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Batteries</fullName>
            </value>
            <value>
                <fullName>Polymers &amp; Recycling</fullName>
            </value>
            <value>
                <fullName>Personal Care</fullName>
            </value>
            <value>
                <fullName>Paints &amp; Coatings</fullName>
            </value>
            <value>
                <fullName>Cement &amp; Construction</fullName>
            </value>
            <value>
                <fullName>Metals &amp; Mining</fullName>
            </value>
            <value>
                <fullName>Aerospace &amp; Automotive</fullName>
            </value>
            <value>
                <fullName>Semiconductors &amp; Nanotechnology</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Textiles</fullName>
            </value>
            <value>
                <fullName>Pulp &amp; Paper</fullName>
            </value>
            <value>
                <fullName>Printing &amp; Graphics</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>