Perkin-UAT/force-app/main/default/objects/Account/fields/Account_Modification_Complete__c.field-meta.xml
<CustomField>
    <fullName>Account_Modification_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>must be chkd by Data Steward upon completing Acct Mod Requests before &#39;Save&#39;</description>
    <inlineHelpText>If you&#39;ve completed Acct Mod. Req. Edits,
please check this box and &#39;Save&#39;</inlineHelpText>
    <label>Account Modification Complete</label>
    <type>Checkbox</type>
</CustomField>