Perkin-UAT/force-app/main/default/objects/Account/fields/Account_Modification_flag__c.field-meta.xml
<CustomField>
    <fullName>Account_Modification_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Modification flag</label>
    <type>Checkbox</type>
</CustomField>