Perkin-UAT/force-app/main/default/objects/Account/fields/Account_Sector_Other_Free_Form__c.field-meta.xml
<CustomField>
    <fullName>Account_Sector_Other_Free_Form__c</fullName>
    <label>Account Sector (Other / Free-Form)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>