Perkin-UAT/force-app/main/default/objects/Account/fields/Account_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Sub_Category__c</fullName>
    <label>Account Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Genetic Screening</fullName>
            </value>
            <value>
                <fullName>Educational - State</fullName>
            </value>
            <value>
                <fullName>State Agencies</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>