Perkin-UAT/force-app/main/default/objects/Account/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>LST or DX - Another segmentation field which attempts to group by clinical or LS. Not sure if still used</description>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic institution</fullName>
            </value>
            <value>
                <fullName>Cancer Center</fullName>
            </value>
            <value>
                <fullName>Children’s Hospital</fullName>
            </value>
            <value>
                <fullName>Commercial Lab</fullName>
            </value>
            <value>
                <fullName>Comprehensive Cancer Center</fullName>
            </value>
            <value>
                <fullName>Hematology-Oncology practice</fullName>
            </value>
            <value>
                <fullName>Hospital Lab</fullName>
            </value>
            <value>
                <fullName>Other(s)</fullName>
            </value>
            <value>
                <fullName>Physician Practice</fullName>
            </value>
            <value>
                <fullName>Research Lab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>