Perkin-UAT/force-app/main/default/objects/Account/fields/Account_Unique_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Account_Unique_Indicator__c</fullName>
    <formula>Name &amp; &quot; || &quot; &amp; ShippingStreet &amp; &quot; || &quot; &amp; ShippingCity &amp; &quot; || &quot; &amp; ShippingState &amp; &quot; || &quot; &amp; ShippingPostalCode &amp; &quot; || &quot; &amp; ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Unique Indicator</label>
    <type>Text</type>
</CustomField>