Perkin-UAT/force-app/main/default/objects/Account/fields/Acct_Shipping_State_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Acct_Shipping_State_Full_Name__c</fullName>
    <description>for Free Form entry of a  Country&#39;s  Shipping State &gt;10 char</description>
    <inlineHelpText>For entering Shipping State Full Name</inlineHelpText>
    <label>State Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>