Perkin-UAT/force-app/main/default/objects/Account/fields/Active_NTD__c.field-meta.xml
<CustomField>
    <fullName>Active_NTD__c</fullName>
    <description>used for NTD / SDx</description>
    <label>Active - NTD</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>