Perkin-UAT/force-app/main/default/objects/Account/fields/Add_Screen_Notes__c.field-meta.xml
<CustomField>
    <fullName>Add_Screen_Notes__c</fullName>
    <description>used for NTD / SDx</description>
    <label>Add Screen Notes</label>
    <type>TextArea</type>
</CustomField>