Perkin-UAT/force-app/main/default/objects/Account/fields/Analytes_2__c.field-meta.xml
<CustomField>
    <fullName>Analytes_2__c</fullName>
    <description>11/10/15 - To Be Deleted</description>
    <label>Analytes 2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TSH</fullName>
            </value>
            <value>
                <fullName>PKU</fullName>
            </value>
            <value>
                <fullName>GALT</fullName>
            </value>
            <value>
                <fullName>17a-OHP</fullName>
            </value>
            <value>
                <fullName>IRT</fullName>
            </value>
            <value>
                <fullName>IEF gels</fullName>
            </value>
            <value>
                <fullName>Hb kit</fullName>
            </value>
            <value>
                <fullName>MSMS</fullName>
            </value>
            <value>
                <fullName>Biotinidase</fullName>
            </value>
            <value>
                <fullName>G6PD</fullName>
            </value>
            <value>
                <fullName>T4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>