Perkin-UAT/force-app/main/default/objects/Account/fields/Analytical_process_lab__c.field-meta.xml
<CustomField>
    <fullName>Analytical_process_lab__c</fullName>
    <label>Analytical process software (lab)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PerkinElmer</fullName>
            </value>
            <value>
                <fullName>StarLIMS</fullName>
            </value>
            <value>
                <fullName>Homebrew</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>