Perkin-UAT/force-app/main/default/objects/Account/fields/B2B_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_Effective_Date__c</fullName>
    <description>PERK-329</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>