Perkin-UAT/force-app/main/default/objects/Account/fields/B2B_Is_Currently_Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>B2B_Is_Currently_Tax_Exempt__c</fullName>
    <formula>AND(
  NOT(ISBLANK(B2B_Exemption_Code__c)),
  TODAY() &gt;= B2B_Effective_Date__c,
  TODAY() &lt;= B2B_Expiration_Date__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Currently Tax Exempt?</label>
    <type>Checkbox</type>
</CustomField>