Perkin-UAT/force-app/main/default/objects/Account/fields/B2B_Subscription_Discount__c.field-meta.xml
<CustomField>
    <fullName>B2B_Subscription_Discount__c</fullName>
    <label>B2B Subscription Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>