Perkin-UAT/force-app/main/default/objects/Account/fields/BD_Account_Name_Label__c.field-meta.xml
<CustomField>
    <fullName>BD_Account_Name_Label__c</fullName>
    <description>Used in screen flow when creating a quote from an opportunity. Allows a user to search by additional fields when searching.</description>
    <formula>Name &amp;&quot; &quot;&amp;  PKI_SAP_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Label</label>
    <type>Text</type>
</CustomField>