Perkin-UAT/force-app/main/default/objects/Account/fields/BillingAddressComputed__c.field-meta.xml
<CustomField>
    <fullName>BillingAddressComputed__c</fullName>
    <formula>BillingStreet &amp;  BillingCity &amp;  BillingState &amp;  BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingAddressComputed</label>
    <type>Text</type>
</CustomField>