Perkin-UAT/force-app/main/default/objects/Account/fields/Borderline_Risks__c.field-meta.xml
<CustomField>
    <fullName>Borderline_Risks__c</fullName>
    <description>used for NTD / SDx</description>
    <label>Borderline Risks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>