Perkin-UAT/force-app/main/default/objects/Account/fields/BU_INF__c.field-meta.xml
<CustomField>
    <fullName>BU_INF__c</fullName>
    <description>Field to capture BU information on accounts</description>
    <label>Legacy BU</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>INF</fullName>
            </value>
            <value>
                <fullName>LST</fullName>
            </value>
            <value>
                <fullName>ENV</fullName>
            </value>
            <value>
                <fullName>Dx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>