Perkin-UAT/force-app/main/default/objects/Account/fields/Chemagen_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Chemagen_Account_Type__c</fullName>
    <label>Chemagen Account Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commercial Lab</fullName>
            </value>
            <value>
                <fullName>Academic Institution</fullName>
            </value>
            <value>
                <fullName>Biobank/Repository</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>