Perkin-UAT/force-app/main/default/objects/Account/fields/Client_Financial_Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Client_Financial_Risk_Assessment__c</fullName>
    <label>Client Financial Risk Assessment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>