Perkin-UAT/force-app/main/default/objects/Account/fields/Clinician_Access__c.field-meta.xml
<CustomField>
    <fullName>Clinician_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clinician Access</label>
    <type>Checkbox</type>
</CustomField>