Perkin-UAT/force-app/main/default/objects/Account/fields/Cluster_Flag_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Flag_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for 3 field array</description>
    <label>Cluster Flag Reviewed</label>
    <type>Checkbox</type>
</CustomField>