Perkin-UAT/force-app/main/default/objects/Account/fields/Cluster_ID__c.field-meta.xml
<CustomField>
    <fullName>Cluster_ID__c</fullName>
    <description>to coincide with a 3-field array  &quot;Cluster ID, Cluster Review Flag, Cluster Review Date&#39;.</description>
    <label>Cluster ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>