Perkin-UAT/force-app/main/default/objects/Account/fields/Cluster_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Review_Date__c</fullName>
    <description>3 rd of e field array</description>
    <label>Cluster Review Date</label>
    <type>DateTime</type>
</CustomField>