Perkin-UAT/force-app/main/default/objects/Account/fields/Contract_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiration_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NIPT Contract Expiration Date</label>
    <type>Checkbox</type>
</CustomField>