Perkin-UAT/force-app/main/default/objects/Account/fields/Country_of_Incorporation_Calc__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Incorporation_Calc__c</fullName>
    <label>Country of Incorporation Calc</label>
    <length>80</length>
    <type>Text</type>
</CustomField>