Perkin-UAT/force-app/main/default/objects/Account/fields/CR_Target__c.field-meta.xml
<CustomField>
    <fullName>CR_Target__c</fullName>
    <label>CR Target#</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>