Perkin-UAT/force-app/main/default/objects/Account/fields/CRL_Low_Limit_37__c.field-meta.xml
<CustomField>
    <fullName>CRL_Low_Limit_37__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CRL Low Limit 37</label>
    <type>Checkbox</type>
</CustomField>