Perkin-UAT/force-app/main/default/objects/Account/fields/Date_Parent_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>Date_Parent_Last_Modified__c</fullName>
    <description>Used in the UpdateParentAutomated.apxc to determine whether or not to include this record again.</description>
    <inlineHelpText>Used in the UpdateParentAutomated.apxc to determine whether or not to include this record again.</inlineHelpText>
    <label>Date Parent Last Modified</label>
    <type>Date</type>
</CustomField>