Perkin-UAT/force-app/main/default/objects/Account/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <description>for 1 of 3 Duns fields MDM</description>
    <label>DUNS</label>
    <length>20</length>
    <type>Text</type>
</CustomField>