Perkin-UAT/force-app/main/default/objects/Account/fields/Enity_Use_Code__c.field-meta.xml
<CustomField>
    <fullName>Enity_Use_Code__c</fullName>
    <label>Enity Use Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>