Perkin-UAT/force-app/main/default/objects/Account/fields/Enrolled_lives__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_lives__c</fullName>
    <description>DX - 6/15/2017 not sure of still used</description>
    <label># Enrolled lives</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>