Perkin-UAT/force-app/main/default/objects/Account/fields/eProcurement_Catalog_Type__c.field-meta.xml
<CustomField>
    <fullName>eProcurement_Catalog_Type__c</fullName>
    <label>eProcurement Catalog Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Hosted</fullName>
            </value>
            <value>
                <fullName>PunchOut</fullName>
            </value>
            <value>
                <fullName>PunchOut Level 2</fullName>
            </value>
            <value>
                <fullName>Live Price &amp; Availability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>