Perkin-UAT/force-app/main/default/objects/Account/fields/eProcurement_e_catalog_lead_time_days__c.field-meta.xml
<CustomField>
    <fullName>eProcurement_e_catalog_lead_time_days__c</fullName>
    <inlineHelpText>If hosted is selected as choice on eProcurement Catalog Type then please fill this field out</inlineHelpText>
    <label>eProcurement e-catalog lead time(# days)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>